k8s/apps/dns-request-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-request-ui
  namespace: dns-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dns-request-ui
  template:
    metadata:
      labels:
        app: dns-request-ui
    spec:
      containers:
        - name: dns-request-ui
          image: ghcr.io/simardeep1792/dns-request-ui:7267e4ec490e591f2bb800573bede4e2a95dfcf1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
