k8s/apps/dns-request-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-request-ui
  namespace: dns-ui
spec:
  selector:
    app: dns-request-ui
  ports:
    - name: http
      port: 80
      targetPort: 8080
